--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <version>1.6</version>
             <type>jar</type>
         </dependency>
+        <dependency> <!-- For Date & Time Pickers -->
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
