--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,18 @@
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.18.0</version>
         </dependency>
-        <dependency> <!-- closing DB connections safely easily -->
+        <dependency> <!-- Closing DB Connections Safely Easily -->
             <groupId>commons-dbutils</groupId>
             <artifactId>commons-dbutils</artifactId>
             <version>1.6</version>
             <type>jar</type>
         </dependency>
+        <dependency> <!-- JUnit For Code Testing -->
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>        
     </dependencies>
 
     <build>
